test other movements

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="home">
     <div class="wrapper parallax">
-      <header class="navbar">
+      <header class="navbar layer deep-2">
         <hgroup class="navbar-header">
           <img src="" alt="brand" />
           <h1>Enduro Argentina</h1>
@@ -30,10 +30,10 @@
       </header>
       <div class="main-content">
         <section class="section-calendar">
-          <div id="next_race" class="layer deep-3">
+          <div id="next_race" class="layer deep-2">
             <img src="img/first_race.jpg" alt="proxima carrera"/>
           </div>
-          <div class="agenda-layer layer deep-1">
+          <div class="agenda-layer layer deep-2">
             <div class="agenda">
               <hgroup>
                 <h1>2015 <span>Calendario</span></h1>
@@ -91,12 +91,12 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="foto">
               <nav role="tabpanel">
-              <h2>Galerías</h2>
-              <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#foto-EAS1" aria-controls="EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
-                <li role="presentation"><a href="#foto-EAS2" aria-controls="EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
-                <li role="presentation" class="disabled"><a href="" aria-controls="EAS3" role="tab" data-toggle="tab" disabled="disabled">EAS #3</a></li>
-              </ul>
+                <h2>Galerías</h2>
+                <ul class="nav nav-tabs" role="tablist">
+                  <li role="presentation" class="active"><a href="#foto-EAS1" aria-controls="EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
+                  <li role="presentation"><a href="#foto-EAS2" aria-controls="EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
+                  <li role="presentation" class="disabled"><a href="" aria-controls="EAS3" role="tab" data-toggle="tab" disabled="disabled">EAS #3</a></li>
+                </ul>
               </nav>
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="foto-EAS1">
