another test for kittu ¬¬

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/styles.css" title="main styles" type="text/css" />
   </head>
   <body class="home">
-    <div class="wrapper parallax">
-      <header class="navbar layer deep-2">
+    <header class="navbar navbar-fixed-top">
         <hgroup class="navbar-header">
           <img src="" alt="brand" />
           <h1>Enduro Argentina</h1>
@@ -28,7 +27,8 @@
           </ul>
         </nav>
       </header>
-      <div class="main-content">
+      <div class="wrapper parallax">
+        <div class="main-content">
         <section class="section-calendar">
           <div id="next_race" class="layer deep-2">
             <img src="img/first_race.jpg" alt="proxima carrera"/>
