adds collapsible navigation

--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
   </head>
   <body class="home">
     <header class="navbar navbar-fixed-top stripped">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <hgroup class="navbar-header">
-      <img src="img/logo.png" alt="brand" />
-      <h1>Enduro Argentina</h1>
-      <h2>Series</h2>
+        <img src="img/logo.png" alt="brand" />
+        <h1>Enduro Argentina</h1>
+        <h2>Series</h2>
       </hgroup>
-      <nav class="pull-right">
+      <nav class="pull-right collapse navbar-collapse" id="main-nav">
         <ul class="nav navbar-nav">
           <li>
             <div class="dropdown">
