--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>open shimano</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/libs/bootstrap-3.3.2-dist/css/bootstrap.min.css" title="" type="" />
+    <link rel="stylesheet" href="css/libs/bootstrap-3.3.2-dist/css/bootstrap.min.css" title="" type="text/css" />
     <link rel="stylesheet" href="css/styles.css" title="main styles" type="text/css" />
   </head>
   <body class="home">
@@ -16,11 +16,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <hgroup class="navbar-header">
+      <div class="navbar-header">
         <img src="img/logo.png" alt="brand" />
         <h1>Enduro Argentina</h1>
         <h2>Series</h2>
-      </hgroup>
+      </div>
       <nav class="pull-right collapse navbar-collapse" id="main-nav">
         <ul class="nav navbar-nav">
           <li>
@@ -68,9 +68,9 @@
           </div>
           <div class="agenda-layer layer deep-2">
             <div class="agenda">
-              <hgroup>
+              <div class="heading">
               <h1>2015 <span>Calendario</span> <small>/ Carreras anteriores</small></h1>
-              </hgroup>
+              </div>
               <ul>
                 <li class="calendar-event active clearfix">
                   <h3>EAS <strong>#1</strong> <span>VCP</span></h3>
@@ -116,8 +116,8 @@
           <nav role="tabpanel">
             <h2>Media</h2>
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active"><a href="#foto" aria-controls="Foto" role="tab" data-toggle="tab">Foto</a></li>
-              <li role="presentation"><a href="#video" aria-controls="Video" role="tab" data-toggle="tab">Video</a></li>
+              <li role="presentation" class="active"><a href="#foto" aria-controls="foto" role="tab" data-toggle="tab">Foto</a></li>
+              <li role="presentation"><a href="#video" aria-controls="video" role="tab" data-toggle="tab">Video</a></li>
             </ul>
           </nav>
           <div class="tab-content">
@@ -125,9 +125,9 @@
               <nav role="tabpanel">
                 <h2>Galerías</h2>
                 <ul class="nav nav-tabs" role="tablist">
-                  <li role="presentation" class="active"><a href="#foto-EAS1" aria-controls="EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
-                  <li role="presentation"><a href="#foto-EAS2" aria-controls="EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
-                  <li role="presentation" class="disabled"><a href="" aria-controls="EAS3" role="tab" data-toggle="tab" disabled="disabled">EAS #3</a></li>
+                  <li role="presentation" class="active"><a href="#foto-EAS1" aria-controls="foto-EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
+                  <li role="presentation"><a href="#foto-EAS2" aria-controls="foto-EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
+                  <li role="presentation" class="disabled"><a href="" aria-controls="foto-EAS3" role="tab" data-toggle="tab" >EAS #3</a></li>
                 </ul>
               </nav>
               <div class="tab-content">
@@ -143,9 +143,9 @@
               <nav role="tabpanel">
                 <h2>Galerías</h2>
                 <ul class="nav nav-tabs" role="tablist">
-                  <li role="presentation" class="active"><a href="#video-EAS1" aria-controls="EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
-                  <li role="presentation"><a href="#video-EAS2" aria-controls="EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
-                  <li role="presentation" class="disabled"><a href="" aria-controls="EAS3" role="tab" data-toggle="tab" disabled="disabled">EAS #3</a></li>
+                  <li role="presentation" class="active"><a href="#video-EAS1" aria-controls="video-EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
+                  <li role="presentation"><a href="#video-EAS2" aria-controls="video-EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
+                  <li role="presentation" class="disabled"><a href="" aria-controls="video-EAS3" role="tab" data-toggle="tab" >EAS #3</a></li>
                 </ul>
               </nav>
               <div class="tab-content">
@@ -165,9 +165,9 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-1">
-              <hgroup>
+              <div class="heading">
                 <img src="img/brand_white.png" alt="brand" class="brand" />
-              </hgroup>
+              </div>
               <nav>
                 <ul class="nav">
                   <li><a href="">Disciplina</a></li>
@@ -181,9 +181,9 @@
             </div>
             <div class="col-md-4">
               <div class="agenda">
-                <hgroup>
+                <div class="heading">
                 <h1>2015 <span>Calendario</span> <small>/ Carreras anteriores</small></h1>
-                </hgroup>
+                </div>
                 <ul>
                   <li class="calendar-event active clearfix">
                     <h3>EAS <strong>#1</strong> <span>VCP</span></h3>
