w3c validation errors fixes

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <ul class="nav navbar-nav">
           <li>
             <div class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Calendario</a>
-              <div class="dropdown-menu" role="menu" aria-labelledby="calendario">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="calendar-link">Calendario</a>
+              <div class="dropdown-menu" role="menu" aria-labelledby="calendar-link">
                 <div class="agenda">
                   <ul>
                     <li class="calendar-event active clearfix">
