w3c validation errors fixes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" class="active"><a href="#foto-EAS1" aria-controls="foto-EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
                   <li role="presentation"><a href="#foto-EAS2" aria-controls="foto-EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
-                  <li role="presentation" class="disabled"><a href="" aria-controls="foto-EAS3" role="tab" data-toggle="tab" >EAS #3</a></li>
+                  <li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" >EAS #3</a></li>
                 </ul>
               </nav>
               <div class="tab-content">
@@ -145,7 +145,7 @@
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" class="active"><a href="#video-EAS1" aria-controls="video-EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
                   <li role="presentation"><a href="#video-EAS2" aria-controls="video-EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
-                  <li role="presentation" class="disabled"><a href="" aria-controls="video-EAS3" role="tab" data-toggle="tab" >EAS #3</a></li>
+                  <li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" >EAS #3</a></li>
                 </ul>
               </nav>
               <div class="tab-content">
