Fix W3 validation errors...

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <title>open shimano</title>
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/libs/bootstrap-3.3.2-dist/css/bootstrap.min.css" title="" type="text/css" />
     <link rel="stylesheet" href="css/styles.css" title="main styles" type="text/css" />
   </head>
@@ -113,23 +113,23 @@
           </div>
         </section>
         <section class="section-gallery has-bg">
-          <nav role="tabpanel">
+          <div role="tabpanel">
             <h2>Media</h2>
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation" class="active"><a href="#foto" aria-controls="foto" role="tab" data-toggle="tab">Foto</a></li>
               <li role="presentation"><a href="#video" aria-controls="video" role="tab" data-toggle="tab">Video</a></li>
             </ul>
-          </nav>
+          </div>
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="foto">
-              <nav role="tabpanel">
+              <div role="tabpanel">
                 <h2>Galerías</h2>
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" class="active"><a href="#foto-EAS1" aria-controls="foto-EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
                   <li role="presentation"><a href="#foto-EAS2" aria-controls="foto-EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
                   <li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" >EAS #3</a></li>
                 </ul>
-              </nav>
+              </div>
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="foto-EAS1">
                   <img src="img/gallery-pic1.jpg" alt="foto carrera 1" />
@@ -140,20 +140,20 @@
               </div>
             </div>
             <div role="tabpanel" class="tab-pane" id="video">
-              <nav role="tabpanel">
+              <div role="tabpanel">
                 <h2>Galerías</h2>
                 <ul class="nav nav-tabs" role="tablist">
                   <li role="presentation" class="active"><a href="#video-EAS1" aria-controls="video-EAS1" role="tab" data-toggle="tab">EAS #1</a></li>
                   <li role="presentation"><a href="#video-EAS2" aria-controls="video-EAS2" role="tab" data-toggle="tab">EAS #2</a></li>
                   <li role="presentation" class="disabled"><a href="" role="tab" data-toggle="tab" >EAS #3</a></li>
                 </ul>
-              </nav>
+              </div>
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="video-EAS1">
-                  <iframe width="100%" height="900" src="https://www.youtube.com/embed/SxNO6YCYu-I" frameborder="0" allowfullscreen></iframe>
+                  <iframe class="embedded-video" src="https://www.youtube.com/embed/SxNO6YCYu-I" allowfullscreen></iframe>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="video-EAS2">
-                  <iframe width="100%" height="900" src="https://www.youtube.com/embed/SxNO6YCYu-I" frameborder="0" allowfullscreen></iframe>
+                  <iframe class="embedded-video" src="https://www.youtube.com/embed/SxNO6YCYu-I" allowfullscreen></iframe>
                 </div>
               </div>
             </div>
