--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <div class="wrapper parallax">
       <div class="main-content">
         <section class="section-calendar">
-          <div id="next_race" class="full-width layer deep-2" data-stellar-ratio="0.8">
+          <div id="next_race" class="next-race full-width layer deep-2" data-stellar-ratio="0.75">
             <img src="img/first_race.jpg" alt="proxima carrera"/>
           </div>
-          <div class="agenda-layer layer deep-2" data-stellar-ratio="0.8">
+          <div class="agenda-layer layer deep-2" data-stellar-ratio="0.65">
             <div class="agenda">
               <div class="heading">
               <h1>2015 <span>Calendario</span> <small>/ Carreras anteriores</small></h1>
@@ -91,10 +91,10 @@
               </ul>
             </div>
           </div>
-          <div class="enduro-brand layer deep-1int" data-stellar-ratio="0.5">
+          <div class="enduro-brand layer deep-1int" data-stellar-ratio="0.75">
             <img src="img/enduro_argentina.png" alt="brand"/>
           </div>
-          <div class="featured stripped clearfix layer deep-2" data-stellar-ratio="0.8">
+          <div class="featured stripped clearfix layer deep-2" data-stellar-ratio="0.6">
             <div class="calendar-event col-md-3">
               <p class="date-calendar"><span>Marzo</span><span>23/24</span></p>
               <h4>Próxima Carrera</h4>
@@ -108,11 +108,11 @@
               <p class="description"><strong>Roc de las Sierras</strong> <span>Villa Carlos Paz</span> <a href="#" class="btn btn-primary">Mas Info</a></p>
             </div>
           </div>
-          <div id="last_race" class="full-width layer deep-3" data-stellar-ratio="0.6">
+          <div id="last_race" class="last-race full-width layer deep-3" data-stellar-ratio="0.75">
             <img src="img/last_race.jpg" alt="ultima carrera"/>
           </div>
         </section>
-        <section class="section-gallery has-bg">
+        <section class="section-gallery has-bg" data-stellar-background-ratio="0.5">
           <div role="tabpanel">
             <h2>Media</h2>
             <ul class="nav nav-tabs" role="tablist">
