Better handling of scroll to footer animation...

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </nav>
     </header>
     <div class="wrapper parallax">
-      <div class="main-content" data-content>
+      <div class="main-content">
         <section class="section-calendar">
           <div id="next_race" class="next-race full-width layer deep-2" data-stellar-ratio="0.75">
             <img src="img/first_race.jpg" alt="proxima carrera"/>
@@ -161,7 +161,7 @@
         </section>
 
       </div>
-      <footer class="section-footer" data-footer data-spy="affix" data-offset-top="1" data-offset-bottom="0">
+      <footer class="section-footer" data-footer data-spy="affix" data-offset-top="1500" data-offset-bottom="0">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-1">
