--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
           <li><a href="">Noticias</a></li>
           <li>
             <div class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="calendar-link">Descargas</a>
-              <div class="dropdown-menu downloads" role="menu" aria-labelledby="calendar-link">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="downloads-link">Descargas</a>
+              <div class="dropdown-menu downloads" role="menu" aria-labelledby="downloads-link">
                   <ul>
                     <li>
                       <h3>Reglamento <a href="#" class="btn btn-primary btn-inverse pull-right">Descargar</a></h3>
@@ -72,8 +72,8 @@
           <li><a href="" class="social-link">Facebook</a></li>
           <li>
             <div class="dropdown">
-              <a href="#" class="special-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="calendar-link">Eventos <img src="img/sde.png" alt="SDE SRL" /></a>
-              <div class="dropdown-menu eventos" role="menu" aria-labelledby="calendar-link">
+              <a href="#" class="special-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="events-link">Eventos <img src="img/sde.png" alt="SDE SRL" /></a>
+              <div class="dropdown-menu eventos" role="menu" aria-labelledby="events-link">
                 <div class="row">
                   <div class="col-md-3 col-md-offset-3">
                     <div class="sponsor">
