--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <title>open shimano</title>
     <link href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/libs/font-awesome/css/font-awesome.min.css" title="" type="text/css">
     <link rel="stylesheet" href="css/libs/bootstrap-3.3.2-dist/css/bootstrap.min.css" title="" type="text/css" />
     <link rel="stylesheet" href="css/styles.css" title="main styles" type="text/css" />
   </head>
@@ -59,21 +60,55 @@
               <div class="dropdown-menu downloads" role="menu" aria-labelledby="downloads-link">
                   <ul>
                     <li>
-                      <h3>Reglamento <a href="#" class="btn btn-primary btn-inverse pull-right">Descargar</a></h3>
+                      <h3 class="clearfix">Reglamento <a href="#" class="btn btn-primary btn-inverse pull-right">Descargar</a></h3>
                     </li>
                     <li>
-                      <h3>Deslinde <a href="#" class="btn btn-primary btn-inverse pull-right">Descargar</a></h3>
+                      <h3 class="clearfix">Deslinde <a href="#" class="btn btn-primary btn-inverse pull-right">Descargar</a></h3>
                     </li>
                   </ul>
               </div>
             </div>
           </li>
-          <li><a href="">Contacto</a></li>
+          <li>
+            <div class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="downloads-link">Contacto</a>
+              <div class="dropdown-menu contact" role="menu" aria-labelledby="downloads-link">
+                <form action="" method="post" class="form-horizontal row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="name" class="col-sm-2 control-label">Nombre</label>
+                      <div class="col-sm-10">
+                        <input type="text" class="form-control" name="name" id="name" value="" />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="mail" class="col-sm-2 control-label">Email</label>
+                      <div class="col-sm-10">
+                        <input type="text" class="form-control" name="mail" id="mail" value="" />
+                      </div>
+                    </div>
+                    <div class="text-right">
+                      <a href="mailto:info@ridesrl.com.ar">info@ridesrl.com.ar</a>
+                      <a href="#" class="fa fa-facebook"></a>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <textarea name="message" id="message" class="form-control" rows="8"></textarea>
+                    </div>
+                    <div class="form-group text-right">
+                      <button type="submit" class="btn btn-primary btn-success">Enviar</button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </li>
           <li><a href="" class="social-link">Facebook</a></li>
           <li>
             <div class="dropdown">
               <a href="#" class="special-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="events-link">Eventos <img src="img/sde.png" alt="SDE SRL" /></a>
-              <div class="dropdown-menu eventos" role="menu" aria-labelledby="events-link">
+              <div class="dropdown-menu events" role="menu" aria-labelledby="events-link">
                 <div class="row">
                   <div class="col-md-3 col-md-offset-3">
                     <div class="sponsor">
