adding smooth scrolling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
           </li>
           <li><a href="">Disciplina</a></li>
-          <li><a href="">Media</a></li>
+          <li><a href="#media">Media</a></li>
           <li><a href="">Noticias</a></li>
           <li>
             <div class="dropdown">
@@ -190,7 +190,7 @@
             <img src="img/last_race.jpg" alt="ultima carrera"/>
           </div>
         </section>
-        <section class="section-gallery has-bg" data-stellar-background-ratio="0.5">
+        <section id="media" class="section-gallery has-bg" data-stellar-background-ratio="0.5">
           <div role="tabpanel">
             <h2>Media</h2>
             <ul class="nav nav-tabs" role="tablist">
@@ -250,7 +250,7 @@
               <nav>
                 <ul class="nav">
                   <li><a href="">Disciplina</a></li>
-                  <li><a href="">Media</a></li>
+                  <li><a href="#media">Media</a></li>
                   <li><a href="">Noticias</a></li>
                   <li><a href="">Descargas</a></li>
                   <li><a href="">Contacto</a></li>
