--- a/inner_page.html
+++ b/inner_page.html
@@ -52,7 +52,7 @@
             </div>
           </li>
           <li><a href="">Disciplina</a></li>
-          <li><a href="">Media</a></li>
+          <li><a href="#media">Media</a></li>
           <li><a href="">Noticias</a></li>
           <li>
             <div class="dropdown">
@@ -273,7 +273,7 @@
             </div>
           </div>
         </section>
-        <section class="section-gallery has-bg">
+        <section id="media" class="section-gallery has-bg">
           <div role="tabpanel">
             <h2>Media</h2>
             <ul class="nav nav-tabs" role="tablist">
@@ -336,7 +336,7 @@
               <nav>
                 <ul class="nav">
                   <li><a href="">Disciplina</a></li>
-                  <li><a href="">Media</a></li>
+                  <li><a href="#media">Media</a></li>
                   <li><a href="">Noticias</a></li>
                   <li><a href="">Descargas</a></li>
                   <li><a href="">Contacto</a></li>
