data-smooth to enable smooth scroll effect...

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
           </li>
           <li><a href="">Disciplina</a></li>
-          <li><a href="#media">Media</a></li>
+          <li><a href="#media" data-smooth>Media</a></li>
           <li><a href="">Noticias</a></li>
           <li>
             <div class="dropdown">
@@ -250,7 +250,7 @@
               <nav>
                 <ul class="nav">
                   <li><a href="">Disciplina</a></li>
-                  <li><a href="#media">Media</a></li>
+                  <li><a href="#media" data-smooth>Media</a></li>
                   <li><a href="">Noticias</a></li>
                   <li><a href="">Descargas</a></li>
                   <li><a href="">Contacto</a></li>
