open header dropdowns on hover

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="nav navbar-nav">
           <li>
             <div class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="calendar-link">Calendario</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"  role="button" aria-expanded="false" id="calendar-link">Calendario</a>
               <div class="dropdown-menu" role="menu" aria-labelledby="calendar-link">
                 <div class="agenda">
                   <ul>
@@ -56,7 +56,7 @@
           <li><a href="">Noticias</a></li>
           <li>
             <div class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="downloads-link">Descargas</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false" id="downloads-link">Descargas</a>
               <div class="dropdown-menu downloads" role="menu" aria-labelledby="downloads-link">
                   <ul>
                     <li>
@@ -71,7 +71,7 @@
           </li>
           <li>
             <div class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="downloads-link">Contacto</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false" id="downloads-link">Contacto</a>
               <div class="dropdown-menu contact" role="menu" aria-labelledby="downloads-link">
                 <form action="" method="post" class="form-horizontal row">
                   <div class="col-md-6">
@@ -107,7 +107,7 @@
           <li><a href="" class="social-link">Facebook</a></li>
           <li>
             <div class="dropdown">
-              <a href="#" class="special-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="events-link">Eventos <img src="img/sde.png" alt="SDE SRL" /></a>
+              <a href="#" class="special-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false" id="events-link">Eventos <img src="img/sde.png" alt="SDE SRL" /></a>
               <div class="dropdown-menu events" role="menu" aria-labelledby="events-link">
                 <div class="row">
                   <div class="col-md-3 col-md-offset-3">
@@ -352,6 +352,7 @@
     <script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/libs/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/libs/stellar.js/jquery.stellar.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/libs/bootstrap-hover-dropdown.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/main.js"></script>
   </body>
 </html>
