fixes requested by kittu

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </ul>
             </div>
           </div>
-          <div class="enduro-brand layer deep-1int" data-stellar-ratio="0.65">
+          <div class="enduro-brand layer deep-1int" data-stellar-ratio="0.63">
             <img src="img/enduro_argentina.png" alt="brand"/>
           </div>
           <div class="featured stripped clearfix layer deep-2" data-stellar-ratio="0.6">
@@ -278,8 +278,7 @@
         </section>
 
       </div>
-      <div class="footer-proximity" data-footer data-spy="affix" data-offset-top="1500" data-offset-bottom="0"></div>
-      <footer class="section-footer">
+      <footer class="section-footer" data-footer>
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-1">
