--- a/inner_page.html
+++ b/inner_page.html
@@ -363,8 +363,7 @@
 
       </div>
 
-      <div class="footer-proximity" data-footer data-spy="affix" data-offset-top="1500" data-offset-bottom="0"></div>
-      <footer class="section-footer">
+      <footer class="section-footer" data-footer>
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-1">
